# t-rag

./: pyproject.toml
t_rag/: t-rag-base.py  t-rag-index.py  t-rag.py
